Add hero images to homepage and collection pages

--- a/collection-moeder-dochter.html
+++ b/collection-moeder-dochter.html
@@ -72,10 +72,7 @@
         <div class="container">
             <div class="collection-hero">
                 <div class="collection-image">
-                    <div class="image-placeholder large">
-                        <i class="fas fa-image"></i>
-                        <span data-nl="Moeder & Dochter Hero Afbeelding" data-en="Mom & Daughter Hero Image">Moeder & Dochter Hero Afbeelding</span>
-                    </div>
+                    <img src="assets/images/hero-moeder-dochter.jpg" alt="Moeder & Dochter" class="collection-hero-img">
                 </div>
                 <div class="collection-info">
                     <span class="collection-tag" data-nl="Bestseller Collectie" data-en="Bestseller Collection">Bestseller Collectie</span>
