--- a/collection-vader-zoon.html
+++ b/collection-vader-zoon.html
@@ -51,10 +51,7 @@
         <div class="container">
             <div class="collection-hero">
                 <div class="collection-image">
-                    <div class="image-placeholder large">
-                        <i class="fas fa-image"></i>
-                        <span>Vader & Zoon Hero Afbeelding</span>
-                    </div>
+                    <img src="assets/images/hero-vader-zoon.jpg" alt="Vader & Zoon" class="collection-hero-img">
                 </div>
                 <div class="collection-info">
                     <span class="collection-tag">Trending Collectie</span>
