--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-bg">
-            <div class="hero-placeholder">
-                <i class="fas fa-image"></i>
-                <span data-nl="Hero Afbeelding - Gezin in bijpassende outfits" data-en="Hero Image - Family in matching outfits">Hero Afbeelding - Gezin in bijpassende outfits</span>
-            </div>
+            <img src="assets/images/hero-homepage.jpg" alt="Gezin in bijpassende outfits" class="hero-image">
         </div>
         <div class="hero-content">
             <p class="hero-tagline" data-nl="TWINNEN IS WINNEN" data-en="TWINNING IS WINNING">TWINNEN IS WINNEN</p>
